Fix image blurriness in non-Gecko browsers

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,7 @@
+* {
+    image-rendering: -webkit-optimize-contrast !important;
+}
+
 h1, h2, h3, h4, h5, h6, p, li, ul {
     margin-top: 0px;
     margin-bottom: 0px;
